--- a/index.html
+++ b/index.html
@@ -3454,7 +3454,7 @@
 
                     <div class="download_link" id="download_link">
                         <a class="preparing" href="#"><span>تجهيز الملف...</span></a>
-                        <a class="input popsok" aria-label="Download file" href="https://downloadf1.appsfire.co/YTGold/12/YouTube_Gold_V12.0.apk" id="downloadButton"> Download (80.5MB) تحميل </a>
+                        <a class="input popsok" aria-label="Download file" href="https://dll.omar-ym.com/apps/YTGold/YouTube_Gold_V12.0.apk" id="downloadButton"> Download (80.5MB) تحميل </a>
                         <a class="starting" href="#"><span>...سيبدا التحميل الآن</span></a>
                         <a class="retry" href="https://ytgold.wazaps.net">
                             <span class="notranslate">Not working? <em>Repair your download</em></span>
