--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
                     <div class="filetype"><span>Compressed Archive</span><span> (.APK)<span></span></span></div>
                 </div>
                 <ul class="details">
-                    <li>File size: <span>91.98MB</span></li>
-                    <li>Uploaded: <span>2024-03-30 22:15:33</span></li>
+                    <li>File size: <span>80.5MB</span></li>
+                    <li>Uploaded: <span>2024-10-08 22:15:33</span></li>
                 </ul>
                 <div class="description">
                     <p class="description-subheading">About Compressed Archive Formats</p>
@@ -591,7 +591,7 @@
             <!-- <div class="DLExtraInfo-sectionHeading">This file&#8217;s upload location</div> -->
                         <div class="lazyload DLExtraInfo-sectionGraphic flag" data-lazyclass="flag-ye"></div>
                         <div class="DLExtraInfo-sectionDetails">
-                <p>This file was uploaded from Yemen on March 30, 2024 at 10:15 PM</p>
+                <p>This file was uploaded from GoldStan on Oct 08, 2024 at 10:15 PM</p>
             </div>
         </div>
 
