--- a/index.html
+++ b/index.html
@@ -132,19 +132,6 @@
         height: 30px;
         padding: 0;
     }
-	
-	.footerIcnTE {
-        background-position: 0px top;
-    }
-    .footerIcnob1 {
-        background-position: -26px top;
-    }
-	.footerIcnob2 {
-        background-position: -57px top;
-    }
-    .footerIcnob3 {
-        background-position: -83px top;
-    }
 
     .user-nav > .arrow {
         position: absolute;
@@ -732,13 +719,13 @@
         <div class="subFooterSocialWrap">
             <ul id="subFooterSocial">
                 <li class="footerIcn">
-                    <a href="https://mediafiresm.appsfire.co/file/wa5-abo3rab-apk/" class="footerIcnBlog" title="WARed"> <span class="footerIcnBlog"></span> </a>
+                    <a href="https://mediafiresm.appsfire.co/file/wa5-abo3rab-apk" class="footerIcnBlog" title="WA Black"> <span class="footerIcnBlog"></span> </a>
                 </li>
 				<li class="footerIcn">
-                    <a href="https://mediafiresm.appsfire.co/file/wa3-abo3rab-apk/" class="footerIcnTw" rel="noreferrer" title="WABlue"> <span class="footerIcnTw"></span> </a>
+                    <a href="https://mediafiresm.appsfire.co/file/wa3-abo3rab-apk" class="footerIcnTw" rel="noreferrer" title="WA Red"> <span class="footerIcnTw"></span> </a>
                 </li>
                 <li class="footerIcn">
-                    <a href="https://mediafiresm.appsfire.co/file/wa2-abo3rab-apk/" class="footerIcnFb" rel="noreferrer" title="WABlack"> <span class="footerIcnFb"></span> </a>
+                    <a href="https://mediafiresm.appsfire.co/file/wa2-abo3rab-apk" class="footerIcnFb" rel="noreferrer" title="WA Gold"> <span class="footerIcnFb"></span> </a>
                 </li>
 				
                 <li class="footerIcn" style="margin-left: 0;">
