--- a/index.html
+++ b/index.html
@@ -165,7 +165,18 @@
                 <p>Downloads: 1,234</p>
             </div>
         </div>
-
+		
+		<div class="ads-section">
+            <!-- Google AdSense Ad -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-3294625154556546"
+                 data-ad-slot="1816626196"
+                 data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         
     </div>
 
