--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
   <!-- أيقونات -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
+  <script data-cfasync="false" async type="text/javascript" src="//nc.somasaweel.com/rXAEaz1AY6INzoAl/121985"></script>
+  
+  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3QKTBZDQ0"></script>
 <script>
