--- a/test2.html
+++ b/test2.html
@@ -985,7 +985,7 @@
   <!-- شاشة التحميل -->
   <div id="loader">
     <div class="loader-content">
-      <img src="https://instagold.download/favicon.ico" alt="يوتيوب الذهبي" class="loader-logo">
+      <img src="ytgold.png" alt="يوتيوب الذهبي" class="loader-logo">
       <div class="loader-text" data-lang="ar">جاري تحميل الصفحة...</div>
       <div class="loader-text" data-lang="en">Loading page...</div>
       <div class="loader-progress">
@@ -1044,7 +1044,7 @@
         <div class="app-meta">
           <div class="meta-item">
             <div class="meta-icon"><i class="fas fa-download"></i></div>
-            <div class="meta-value">87.5MB</div>
+            <div class="meta-value">187.5MB</div>
             <div class="meta-label" data-lang="ar">حجم الملف</div>
             <div class="meta-label" data-lang="en">File Size</div>
           </div>
@@ -1066,24 +1066,24 @@
         <div class="download-box">
           <!-- زر تحميل يوتيوب الذهبي -->
           <a href="javascript:void(0);" onclick="startCountdown()" id="fileInfoBox" class="file-box">
-            <img src="app_icon.png" alt="YouTube Gold icon">
+            <img src="" alt="YouTube Gold icon">
             <div class="text">
               <div class="title">YouTube_Gold_v18</div>
               <div class="size" data-lang="ar">اضغط للتحميل (187.5MB)</div>
               <div class="size" data-lang="en">Click to download (187.5MB)</div>
             </div>
-            <i class="fas fa-arrow-down download-icon"></i>
+            <i class="fa-solid fa-file-arrow-down download-icon"></i>
           </a>
 
           <!-- زر تحميل MicroG -->
           <a href="javascript:void(0);" onclick="startMicroGCountdown()" id="microgInfoBox" class="microg-box">
-            <img src="https://dlll.apkm.app/microg/latest/microg.apk" alt="MicroG icon">
+            <img src="" alt="MicroG icon">
             <div class="text">
               <div class="title">MicroG Services</div>
               <div class="size" data-lang="ar">اضغط لتحميل التطبيق المساعد</div>
               <div class="size" data-lang="en">Click to download helper app</div>
             </div>
-            <i class="fas fa-download download-icon"></i>
+            <i class="fa-solid fa-file-arrow-down download-icon"></i>
           </a>
 
           <div id="countdownBox" class="countdown-box"></div>
@@ -1098,7 +1098,7 @@
           </div>
 
           <div id="microgDownloadBox" style="display: none;">
-            <a href="https://microg.org/download.html" 
+            <a href="https://dlll.apkm.app/microg/latest/microg.apk" 
                class="download-btn" style="background: linear-gradient(135deg, #4285F4, #34A853);">
               <i class="fas fa-download"></i>
               <span data-lang="ar">تنزيل MicroG الآن</span>
