--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>YouTube Gold_V19</title>
+  <title>YouTube Gold - يوتيوب الذهبي</title>
   
   <!-- Favicon -->
   <link rel="icon" href="https://instagold.download/favicon.ico" type="image/x-icon">
